[gd_scene load_steps=9 format=1]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Components/DungeonMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://Items/FloorItems.tscn" type="PackedScene" id=3]
[ext_resource path="res://Characters/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Characters/Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hud/Hud.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/tilesets/Dungeon1Tileset.res" type="TileSet" id=7]
[ext_resource path="res://lib/swipe-detector/swipe_detector.gd" type="Script" id=8]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Background" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1080.0
margin/bottom = 1920.0
color = Color( 0.12549, 0.12549, 0.12549, 1 )

[node name="DungeonMap" parent="." instance=ExtResource( 2 )]

[node name="FloorItems" parent="." instance=ExtResource( 3 )]

z/z = 1

[node name="Player" parent="." instance=ExtResource( 4 )]

z/z = 1

[node name="Bat" parent="." instance=ExtResource( 5 )]

transform/pos = Vector2( 1024, 512 )
transform/scale = Vector2( 0.25, 0.25 )
z/z = 1

[node name="Bat2" parent="." instance=ExtResource( 5 )]

transform/pos = Vector2( 1024, 768 )
transform/scale = Vector2( 0.25, 0.25 )
z/z = 1

[node name="HudNode" parent="." instance=ExtResource( 6 )]

z/z = 3

[node name="TileMap_top" type="TileMap" parent="."]

visibility/visible = false
transform/pos = Vector2( -0.225952, 0 )
transform/scale = Vector2( 4, 4 )
mode = 0
tile_set = ExtResource( 7 )
cell/size = Vector2( 32, 32 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 1
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 65560, 37, 65561, 36, 65562, 36, 65563, 36, 65564, 36, 65565, 36, 65566, 36, 65567, 36, 131072, 37, 131073, 36, 131074, 36, 131075, 36, 131077, 36, 131078, 36, 131079, 36, 131080, 36, 131081, 36, 131082, 36, 131083, 36, 131084, 36, 131085, 36, 131086, 36, 131087, 36, 131088, 36, 131092, 36, 131093, 36, 131094, 36, 131095, 36, 262157, 36, 262158, 36, 262159, 36, 393215, 32, 458765, 36, 458766, 36, 458767, 36, 458768, 36, 458769, 36, 458770, 36, 458771, 36, 458772, 36, 589825, 36, 589826, 36, 589827, 36, 589828, 36, 589829, 36, 589830, 36, 589831, 36, 589832, 36, 983035, 36, 983036, 36, 983037, 36, 983038, 36, 983039, 36, 917504, 36, 917505, 36, 917506, 36, 917507, 36, 917508, 36, 917509, 36, 917510, 36, 917511, 36, 917512, 36 )

[node name="SwipeNode" type="Node" parent="."]

script/script = ExtResource( 8 )
detect_gesture = true
process_method = null
distance_threshold = 25.0
duration_threshold = 0.05
limit_duration = false
maximum_duration = -1.0
minimum_points = 2
limit_points = false
maximum_points = -1
pattern_detection_score_threshold = 80
debug_mode = false


